<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">MaT</string>
    <string name="settings">手机设置</string>
    <string name="update_now">接收消息</string>
    <string name="list_empty">无记录</string>
    <string name="action_settings">设置</string>
    <string name="action_user">用户</string>
    <string name="action_refresh">刷新</string>
    <string name="action_compose">发送消息</string>
    <string name="action_inbox">收件箱</string>
    <string name="action_sent">发件箱</string>
    <string name="action_confirm_detail">确认记录</string>
    <string name="action_info_category">数据中心</string>
    <string name="roger">我知道了</string>
    <string name="confirm_detail">确认记录</string>
    <string name="login">登录</string>
    <string name="logout">注销</string>
    <string name="switch_user">切换用户</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="OK">确定</string>
    <string name="cancel">取消</string>
    <string name="mat_full">消息与任务</string>
    <string name="compose_to">收件人</string>
    <string name="compose_content">内容</string>
    <string name="type_for_U">老师</string>
    <string name="type_for_S">同学</string>
    <string name="short_name_of_cs">计算机</string>
    <string name="unit_class">班</string>
    <string name="unit_grade">级</string>
    <string name="title_for_a">安全委员</string>
    <string name="title_for_b">班长</string>
    <string name="title_for_c">宣传委员</string>
    <string name="title_for_h">生活委员</string>
    <string name="title_for_l">心理委员</string>
    <string name="title_for_t">团支书</string>
    <string name="title_for_w">文艺委员</string>
    <string name="title_for_x">学习委员</string>
    <string name="title_for_y">体育委员</string>
    <string name="title_for_z">组织委员</string>
    <string name="title_for_s">汇总表</string>
    <string name="title_for_f">辅导员</string>
    <string name="all_students">全体同学</string>
    <string name="error_network">网络有问题</string>
    <string name="error_network_data">网络数据有问题</string>
    <string name="error_auth_fail">验证用户失败</string>
    <string name="not_confirmed">未确认</string>
    <string name="confirmed">已确认</string>
    <string name="confirm">确认</string>
    <string name="send_message_OK">消息已发送</string>
    <string name="send_message_fail">信息发送失败</string>
    <string name="connecting_server">正在连接服务器</string>
    <string name="refresh_success">顺利更新数据</string>
    <string name="choose_contact">选择联系人</string>
    <string name="last_update_from">上次更新于</string>
    <string name="auto_sync">自动接收消息</string>
    <string name="auto_sync_summary">每隔一段时间自动接收消息</string>
    <string name="auto_sync_period">自动接收消息周期</string>
    <string name="auto_sync_period_summary">每隔多长时间接受一次消息</string>
    <string name="retry_sync_period">接收消息失败后重试周期</string>
    <string name="retry_sync_period_summary">自动接受消息时候后，隔多长久再次尝试</string>
    <string name="add_receiver">添加收件人</string>
    <string name="piece_of_unconfirmed_message">条未确认信息</string>
    <string name="inbox_item_from">发件人</string>
    <string name="inbox_item_to">收件人</string>
    <string name="inbox_item_time">时间</string>
    <string name="inbox_item_content">内容</string>
    <string name="sent_item_to">收件人</string>
    <string name="sent_item_time">时间</string>
    <string name="sent_item_content">内容</string>
    <string name="confirm_progress">进度</string>
    <string name="back">返回</string>
    <string name="auth_fail">你没有这个权限</string>
    <string name="personal_info">个人信息</string>
    <string name="my_underling">我的小伙伴</string>
    <string name="loading">加载中……</string>
    <string name="send_msg_fail">发送消息失败</string>
    <string name="confirm_message_OK">成功确认信息</string>
    <string name="confirm_msg_fail">确认消息失败</string>
    <string name="please_confirm">请确认</string>
    <string name="login_fail">用户名或密码错误</string>
    <string name="initializing">正在初始化数据，请耐心等候</string>
    <string name="change_password">修改密码</string>
    <string name="change_password_success">修改密码成功</string>
    <string name="current_password">当前密码</string>
    <string name="new_password">新密码</string>
    <string name="repeat_password">重复新密码</string>
    <string name="repeat_password_unmatch">两次填写的新密码不一致</string>
    <string name="password_requirement">新密码至少为6位</string>
</resources>
