<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference
        android:key="auto_sync"
        android:title="@string/auto_sync"
        android:summary="@string/auto_sync_summary"
        android:defaultValue="true" />
    <ListPreference
        android:key="auto_sync_period"
        android:title="@string/auto_sync_period"
        android:summary="@string/auto_sync_period_summary"
        android:entries="@array/auto_sync_period_entries"
        android:entryValues="@array/auto_sync_period_values"
        android:defaultValue="240"
        android:dependency="auto_sync" />
    <ListPreference
        android:key="retry_sync_period"
        android:title="@string/retry_sync_period"
        android:summary="@string/retry_sync_period_summary"
        android:entries="@array/retry_sync_period_entries"
        android:entryValues="@array/retry_sync_period_values"
        android:defaultValue="10"
        android:dependency="auto_sync" />
</PreferenceScreen>
