<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal" >
    <TextView
        android:text="@string/current_password"
        android:textSize="18sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp" />
    <EditText
        android:id="@+id/old_password"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp" />
    <TextView
        android:text="@string/new_password"
        android:textSize="18sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp" />
    <EditText
        android:id="@+id/new_password"
        android:hint="@string/password_requirement"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp" />
    <TextView
        android:text="@string/repeat_password"
        android:textSize="18sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp" />
    <EditText
        android:id="@+id/repeat_password"
        android:hint="@string/password_requirement"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp" />
    <Button
        android:id="@+id/change_password_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_password"
        android:onClick="onChangePassword" />
    <ProgressBar android:id="@+id/change_password_progress"
      android:layout_width="wrap_content" 
      android:layout_height="wrap_content"    
      android:visibility="gone"
      android:layout_gravity="center" />
    <EditText
        android:id="@+id/dummy"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:hint="" />
</LinearLayout>
